<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="49dp"
        android:contentDescription="@string/btnCalculate"
        app:srcCompat="@drawable/bank" />

    <EditText
        android:id="@+id/txtQuarters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="289dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtQuarters"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black" tools:targetApi="o" />

    <EditText
        android:id="@+id/txtDimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtQuarters"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/txtDimes"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/txtNickels"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDimes"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginStart="-101dp"
        android:ems="10"
        android:hint="@string/txtNickels"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/txtPennies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNickels"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/txtPennies"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:autofillHints="" tools:targetApi="o" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="236dp"
        android:entries="@array/txtGroup"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="182dp"
        android:text="@string/btnCalculate"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="151dp"
        android:textAlignment="center"
        android:textSize="18sp" />

</RelativeLayout>